ハンバーガーメニュー表

--- a/history.html
+++ b/history.html
@@ -16,10 +16,10 @@
             <a href="index.html"><h1>今治城</h1></a>
             <nav id="nav">
                 <ul>
+                    <li><a href="index.html">トップページ</a></li>
                     <li><a href="guide.html">ご利用案内</a></li>
                     <li><a href="description.html">今治城について</a></li>
                     <li><a href="history.html">歴史・地理</a></li>
-                    
                 </ul>
             </nav>
             <div id="hamburger">
@@ -41,7 +41,75 @@
 
     <div class="contents-wrapper wrapper">
         <h2>年表</h2>
-        <img src="images/history_chronology.jpg" alt="">
+        <table class="default" summary="今治城　年表">
+            <tbody>
+            <tr>
+                <th scope="row">慶長5年（1600）</th>
+                <td>藤堂高虎、関ヶ原の戦いで東軍に属する<br>
+                戦後、伊予半国領主として20万石を領する</td>
+            </tr>
+            <tr>
+                <th scope="row">慶長7年（1602）</th>
+                <td>今治城の起工</td>
+            </tr>
+            <tr>
+                <th scope="row">慶長9年（1604）</th>
+                <td>今治城の普請（土木工事）完成</td>
+            </tr>
+            <tr>
+                <th scope="row">慶長13年（1608）</th>
+                <td>この頃、今治城がすべて完成か。高虎、伊勢・伊賀へ転封<br>
+                高吉が今治2万石の城代となる</td>
+            </tr>
+            <tr>
+                <th scope="row">寛永12年（1635）</th>
+                <td>高吉、伊勢へ転封<br>
+                松平（久松）定房が今治藩3万石の領主になる</td>
+            </tr>
+            <tr>
+                <th scope="row">寛文5年（1665）</th>
+                <td>定房、江戸留守居役（江戸城代）となり、関東に1万石の加増（以後、4万石）</td>
+            </tr>
+            <tr>
+                <th scope="row">延宝4年（1676）</th>
+                <td>松平定陳、弟定昌に5千石を分け与える<br>
+                （以後、3万5千石）</td>
+            </tr>
+            <tr>
+                <th scope="row">元禄11年（1698）</th>
+                <td>関東5千石と宇摩18カ村を替地</td>
+            </tr>
+            <tr>
+                <th scope="row">明治2年（1869）</th>
+                <td>版籍奉還。松平（久松）定法が今治藩知事になる<br>
+                今治城廃城</td>
+            </tr>
+            <tr>
+                <th scope="row">明治4年（1871）</th>
+                <td>廃藩置県。今治藩が廃される</td>
+            </tr>
+            <tr>
+                <th scope="row">昭和28年（1953）</th>
+                <td>主郭部跡と内掘が県指定史跡になる</td>
+            </tr>
+            <tr>
+                <th scope="row">昭和55年（1980）</th>
+                <td>天守閣・多聞櫓・武具櫓などを再建</td>
+            </tr>
+            <tr>
+                <th scope="row">昭和60年（1985）</th>
+                <td>御金櫓再建</td>
+            </tr>
+            <tr>
+                <th scope="row">平成2年（1990）</th>
+                <td>山里櫓再建</td>
+            </tr>
+            <tr>
+                <th scope="row">平成19年（2007）</th>
+                <td>鉄御門再建</td>
+            </tr>
+            </tbody>
+        </table>
         <div class="contents">
             <div class="text second">
                 <h2>藤堂高虎</h2>
