--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             
             <nav id="nav">
                 <ul>
+                    <li><a href="index.html">トップページ</a></li>
                     <li><a href="guide.html">ご利用案内</a></li>
                     <li><a href="description.html">今治城について</a></li>
                     <li><a href="history.html">歴史・地理</a></li>
@@ -62,12 +63,12 @@
 
     <div class="contents-wrapper wrapper">
         <div class="contents">
-            <div class="title first">
-                <a href="guide.html">
-                <img src="images/index_contents_title01.jpg" alt="">
+            <a href="description.html"><div class="title first">
+                <h2>今治城について</h2>
                 <span class="view-more-hover"></span>
-                </a>
-            </div>
+                <p>復元された天守閣や鉄御門など
+                    <br>主な見どころをご紹介します。</p>
+            </div></a>
             <div class="image second">
                 <img src="images/index_contents_img01.jpg" alt="">
             </div>
@@ -76,12 +77,12 @@
             <div class="image second">
                 <img src="images/index_contents_img02.jpg" alt="">
             </div>
-            <div class="title first">
-                <a href="history.html">
-                    <img src="images/index_contents_title02.jpg" alt="">
-                    <span class="view-more-hover"></span>
-                </a>
-            </div>
+            <a href="history.html"><div class="title first">
+                <h2>歴史・地理</h2>
+                <span class="view-more-hover"></span>
+                <p>歴史、地理、天守の特徴などから
+                    <br>今治城の魅力に迫ります。</p>
+            </div></a>
         </div>
     </div>
 
