--- a/description.html
+++ b/description.html
@@ -16,6 +16,7 @@
             <a href="index.html"><h1>今治城</h1></a>
             <nav id="nav">
                 <ul>
+                    <li><a href="index.html">トップページ</a></li>
                     <li><a href="guide.html">ご利用案内</a></li>
                     <li><a href="description.html">今治城について</a></li>
                     <li><a href="history.html">歴史・地理</a></li>
