--- a/history.html
+++ b/history.html
@@ -119,7 +119,9 @@
                     <br>築城技術に長け、宇和島城・今治城・篠山城・津城・伊賀上野城・
                     <br>などを築城し黒田孝高、加藤清正とともに名人として知られる。
                     <br>高虎の築城は、石垣を高く積み上げることと堀の設計に特徴があり、
-                    <br>石垣の反りを重視する加藤清正と対比される。</p>
+                    <br>石垣の反りを重視する加藤清正と対比される。
+                    <br>参考：Wikipedia
+                </p>
             </div>
             <div class="image first">
                 <img src="images/history_contents_img01.jpg" alt="">
@@ -138,12 +140,14 @@
                     <br>抑えとして譜代大名か親藩大名が配置された。
                     <br>つまり今治城には広島藩と福山藩を側面から支援する
                     <br>役割が期待されていたのだ。
+                    <br>参考：株式会社技術評論社　島崎晋
+                    <br>『この地にこの城を建てた理由　凸凹地図で読み解く日本の城』
                 </p>
             </div>
         </div>
         <div class="contents">
             <div class="text second">
-                <h2>藤堂高虎</h2>
+                <h2>層塔型天守と望楼型天守</h2>
                 <p>望楼型というのは、上層部と下層部の形が違っていて、
                     <br>具体的には入母屋造の下層部の上に、
                     <br>物見櫓が乗っているようなスタイルの天守です。
@@ -153,6 +157,7 @@
                     <br>上に行くにつれて平面規模が逓減し、最上重の屋根だけを
                     <br>入母屋造としています。
                     <br>今治城は日本初の層塔型天守です。
+                    <br>参考：株式会社小学館　三浦正幸『城のつくり方辞典』
                 </p>
             </div>
             <div class="image first">
